@@ -1,14 +1,14 @@
 Package: CoxFlexBoost
 Type: Package
 Title: Boosting Flexible Cox Models (with Time-Varying Effects)
-Version: 0.6-0
-Date: 2008-12-09
+Version: 0.7-0
+Date: 2009-03-XX
 Author: Benjamin Hofner
 Maintainer: Benjamin Hofner <benjamin.hofner@imbe.med.uni-erlangen.de>
 Description: Likelihood-based boosting approach to fit flexible,
   structured survival models with component-wise linear or P-spline
   base-learners. Variable selection and model choice are built in
   features.
-Depends: methods, mboost, survival
+Depends: methods, survival, modeltools
 License: GPL-2
 LazyLoad: yes
